<resources>
    <string name="app_name">配置練習</string>
    <string name="title">Hello Android</string>
    <string name="tv_msg">お名前を入力してください。</string>
    <string name="cb_drink">ドリンク</string>
    <string name="cd_food">フード</string>
    <string name="save_bt">保存します</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <string-array name="sp_curryList">
        <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマカレー</item>
        <item>グリーンカレー</item>
    </string-array>

    <string-array name="sp_drink">
        <item>コーラ</item>
        <item>ファンタオレンジ</item>
        <item>緑茶</item>
        <item>はと麦茶</item>
        <item>アメリカンコーヒー</item>
        <item>カフェラテ</item>
        <item>ミルク</item>
        <item>アップルティー</item>
        <item>三ツ矢サイダー</item>
    </string-array>


    <string name="clear">クリア</string>
</resources>
